--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
 	<!--INFO SECTION START-->
   <section class="container-fluid info">
-		<div class="container col-xxl-9 px-4 py-3 mt-5 border border-danger">
-      <div class="row flex-lg-row-reverse align-items-center text-center border border-warning">
+		<div class="container col-xxl-9 px-4 py-3 mt-5">
+      <div class="row flex-lg-row-reverse align-items-center text-center">
         <div class="flair col-2 d-flex justify-content-center m-auto ">
 					<i class="fa fa-solid fa-eye d-flex justify-content-center align-items-center"></i>
 					<h5>Why Qubly</h5>
@@ -111,27 +111,27 @@
       </div>
     </div>
 	</div>
-		<div class="container col-xxl-9 px-4 py-5 border border-danger info_wrapper">
+		<div class="container col-xxl-9 px-4 py-5 info_wrapper">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-sm-1 py-lg-5">
-        <div class="col-lg-6 border border-secondary">
+        <div class="col-lg-6">
           <i class="fa fa-solid fa-sparkles"></i>
           <p>v3.1 released. <a href="#">Learn more!</a></p>
           <h3 class="mb-3">Launch with the <span class="purple">best</span> stack</h3>
           <p class="lead">A centralized platform that integrates zillions of data sources using Big Data ELT (Extract, Load & Transform) that leaves no data behind.</p>
         </div>
-				<div class="col-lg-6 px-5 border border-secondary text">
-          <img src="./assets/launch.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img border border-success" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+				<div class="col-lg-6 px-5 text">
+          <img src="./assets/launch.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img " alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
       </div>
     </div>
 	</div>
-	<div class="container col-xxl-9 px-4 py-5 info_wrapper border border-danger">
+	<div class="container col-xxl-9 px-4 py-5 info_wrapper">
 		<div class="row flex-column-reverse flex-lg-row-reverse align-items-center g-5 py-5">
-			<div class="col-lg-6 px-5 border border-success">
-				<img src="./assets/data.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img border border-success" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+			<div class="col-lg-6 px-5">
+				<img src="./assets/data.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
 			</div>
-			<div class="col-lg-6 border border-info">
-				<div class="border border-warning">
+			<div class="col-lg-6">
+				<div class="">
 					<div class="">	
 						<i class="fa-solid fa-sparkles"></i>
 						<p>v3.1 released. <a href="#">Learn more!</a></p>
@@ -153,14 +153,16 @@
 				<p class="py-5">"What I love about Qubly is the easy way we can collaborate even if there is a lot of people involved in the process"</p>
         <img src="./assets/Profile.png" alt="" class="avatar">
 				<h5 class="mb-3">Guillaume Cabane <br/>CTO @ BigSpring</h5>
-				<div class="row border border-info">
-					<img src="./assets/Tonkean.png" alt="" class="col-sm-6 gx-5 partner_logo img-fluid img-responsive">
-					<img src="./assets/Tonkean.png" alt="" class="col-sm-6 partner_logo img-fluid img-responsive">
+				<!--
+				<div class="row mx-auto border border-info">
+					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
+					<img src="./assets/Tonkean.png" alt="" class="col partner_logo img-fluid img-responsive">
 					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
 					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
 					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
 				</div>
       </div>
+			-->
     </div>
 	</section>
 	<!--REVIEW SECTION END-->
@@ -187,16 +189,16 @@
 	<div class="container">
 		<footer class="py-5 px-5">
 			<div class="row">
-				<div class="col-4">
+				<div class="col-sm-4">
 					<img src="./assets/Qubly.png" alt="" class="mb-3">
 					<p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat ut wisi enim ad minim</p>
 				</div>
 
-				<div class="col-2">
+				<div class="col-sm-1 col-lg-2">
 					<h5>Product</h5>
-					<ul class="nav flex-column">
+					<ul class="nav d-flex flex-column align-items-sm-center align-items-lg-start mt-2">
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Connections</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Protpcols</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Protocols</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Personas</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Integrations</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Catalog</a></li>
@@ -206,9 +208,9 @@
 					</ul>
 				</div>
 	
-				<div class="col-2">
+				<div class="col-sm-1 col-lg-2">
 					<h5>For Developers</h5>
-					<ul class="nav flex-column">
+					<ul class="nav flex-column mt-2">
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Docs</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">API</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Open Source</a></li>
@@ -216,18 +218,18 @@
 					</ul>
 				</div>
 	
-				<div class="col-2">
+				<div class="col-sm-1 col-lg-2">
 					<h5>Company</h5>
-					<ul class="nav flex-column">
+					<ul class="nav flex-column mt-2">
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Careers</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Press</a></li>
 					</ul>
 				</div>
 
-				<div class="col-2">
+				<div class="col-sm-1 col-lg-2">
 					<h5>Support</h5>
-					<ul class="nav flex-column">
+					<ul class="nav flex-column mt-2">
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Help Center</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact Us</a></li>
 						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Security</a></li>
@@ -240,10 +242,14 @@
 	
 				
 			</div>
-	
-			<div class="d-flex justify-content-between py-4 my-4 border-top">
-				<p>© 2022 Qubly, Inc. All rights reserved.</p>
-				<p>Developed by Chris Christodoulou. Design by Rahul Cao.</p>
+			
+			<div class="row border-top py-2">
+				<div class="col-sm-4 col-lg-6 d-flex justify-content-start">
+					<p class="text-center text-lg-start">© 2022 Qubly, Inc. All rights reserved.</p>
+				</div>
+				<div class="col-sm-4 col-lg-6 d-flex justify-content-end">
+					<p class="text-center text-lg-end">Developed by Chris Christodoulou. Design by Rahul Cao.</p>
+				</div>
 			</div>
 		</footer>
 	</div>
