review section left

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 								</ul>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Pricing</a>
+								<a class="nav-link" href="#">Pricing</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Contact us</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link">Login</a>
+								<a class="nav-link" href="#">Login</a>
 							</li>
 							
 							<li class="nav-item">
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 		</nav>
-    <div class="container col-xxl-9 px-4 intro-wrapper py-lg-5 py-sm-5 py-md-2">
+    <div class="container col-xxl-9 px-4 intro-wrapper py-lg-5 py-sm-5 py-md-2 text-center text-lg-start">
       <div class="row flex-lg-row-reverse align-items-center g-sm-2 g-xl-5 px-sm-5 py-lg-5">
         <div class="col-sm-12 col-lg-6 d-flex justify-content-center">
           <img src="./assets/intro.png" class="d-block mx-sm-auto mx-lg-auto img-fluid floating_effect intro_img" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -68,7 +68,7 @@
           <p>v3.1 released. <a href="#">Learn more!</a></p>
           <h1 class="display-5 fw-bold lh-1 mb-3">Your data with real-time analytics</h1>
           <p class="lead">Harness the potential of Big Data Analytics & Cloud Services and become a data-driven organization with Needle tail.</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <div class="d-grid gap-2 d-md-flex d-lg-flex justify-content-md-center justify-content-lg-start">
             <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 solidbtn">Start Free Trial</button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4 outlinebtn">Learn More</button>
           </div>
@@ -113,24 +113,24 @@
 	</div>
 		<div class="container col-xxl-9 px-4 py-5 info_wrapper">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-sm-1 py-lg-5">
-        <div class="col-lg-6">
+        <div class="col-lg-6 text-center text-lg-start">
           <i class="fa fa-solid fa-sparkles"></i>
           <p>v3.1 released. <a href="#">Learn more!</a></p>
           <h3 class="mb-3">Launch with the <span class="purple">best</span> stack</h3>
           <p class="lead">A centralized platform that integrates zillions of data sources using Big Data ELT (Extract, Load & Transform) that leaves no data behind.</p>
         </div>
-				<div class="col-lg-6 px-5 text">
-          <img src="./assets/launch.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img " alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+				<div class="col-lg-6 px-5 text d-flex justify-content-center">
+          <img src="./assets/launch.png" class="img-fluid info_img" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
       </div>
     </div>
 	</div>
 	<div class="container col-xxl-9 px-4 py-5 info_wrapper">
 		<div class="row flex-column-reverse flex-lg-row-reverse align-items-center g-5 py-5">
-			<div class="col-lg-6 px-5">
-				<img src="./assets/data.png" class="mx-sm-auto d-lg-flex d-sm-flex justify-content-center img-fluid info_img" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+			<div class="col-lg-6 px-5 d-flex justify-content-center">
+				<img src="./assets/data.png" class=" img-fluid info_img" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-6 text-center text-lg-start">
 				<div class="">
 					<div class="">	
 						<i class="fa-solid fa-sparkles"></i>
@@ -189,66 +189,63 @@
 	<div class="container">
 		<footer class="py-5 px-5">
 			<div class="row">
-				<div class="col-sm-4">
-					<img src="./assets/Qubly.png" alt="" class="mb-3">
-					<p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat ut wisi enim ad minim</p>
+				<div class="col-sm-12 col-lg-4 text-center text-lg-start">
+					<img src="./assets/Qubly.png" alt="" class="text-sm-center">
+					<p class="text-lg-start">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat ut wisi enim ad minim</p>
 				</div>
-
-				<div class="col-sm-1 col-lg-2">
+				<div class="col-6 col-sm-6 col-md-3 col-lg-2 text-center text-sm-start">
 					<h5>Product</h5>
-					<ul class="nav d-flex flex-column align-items-sm-center align-items-lg-start mt-2">
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Connections</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Protocols</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Personas</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Integrations</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Catalog</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Security</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">GDPR</a></li>
+					<ul class="nav flex-column mt-2">
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Connections</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Protocols</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Personas</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Integrations</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Catalog</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Security</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">GDPR</a></li>
 					</ul>
 				</div>
 	
-				<div class="col-sm-1 col-lg-2">
+				<div class="col-6 col-sm-6 col-md-3 col-lg-2 text-center text-sm-start">
 					<h5>For Developers</h5>
 					<ul class="nav flex-column mt-2">
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Docs</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">API</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Open Source</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Engineering Team</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Docs</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">API</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Open Source</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Engineering Team</a></li>
 					</ul>
 				</div>
 	
-				<div class="col-sm-1 col-lg-2">
+				<div class="col-6 col-sm-6 col-md-3 col-lg-2 text-center text-sm-start">
 					<h5>Company</h5>
 					<ul class="nav flex-column mt-2">
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Careers</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Press</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Careers</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Blog</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Press</a></li>
 					</ul>
 				</div>
 
-				<div class="col-sm-1 col-lg-2">
+				<div class="col-6 col-sm-6 col-md-3 col-lg-2 text-center text-sm-start">
 					<h5>Support</h5>
 					<ul class="nav flex-column mt-2">
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Help Center</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact Us</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Security</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Bulletins</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Documentation</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Partner</a></li>
-						<li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Portal</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Help Center</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Contact Us</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Security</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Bulletins</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Documentation</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Partner</a></li>
+						<li class="nav-item mb-2"><a href="#" class="nav-link p-0">Portal</a></li>
 					</ul>
 				</div>
-	
-				
 			</div>
-			
-			<div class="row border-top py-2">
-				<div class="col-sm-4 col-lg-6 d-flex justify-content-start">
-					<p class="text-center text-lg-start">© 2022 Qubly, Inc. All rights reserved.</p>
+
+			<div class="row border-top py-2 d-flex justify-content-center justify-content-sm-center justify-content-md-start">
+				<div class="col-sm-6 col-md-6 col-lg-6 text-center text-sm-start">
+					<p class="">© 2022 Qubly, Inc. All rights reserved.</p>
 				</div>
-				<div class="col-sm-4 col-lg-6 d-flex justify-content-end">
-					<p class="text-center text-lg-end">Developed by Chris Christodoulou. Design by Rahul Cao.</p>
+				<div class="col-sm-6 col-md-6 col-lg-6 text-center text-sm-end">
+					<p class="">Developed by Chris Christodoulou. Design by Rahul Cao.</p>
 				</div>
 			</div>
 		</footer>
