--- a/index.html
+++ b/index.html
@@ -148,21 +148,20 @@
 
 	<!--REVIEW SECTION START-->
 	<section class="container-fluid review d-flex justify-content-center align-items-center min-vh-100 review_bg">
-    <div class="container col-xxl-9 px-4  border border-success">
+    <div class="container col-xxl-9 px-4">
       <div class="row flex-lg-row-reverse align-items-center text-center">
-				<p class="py-5">"What I love about Qubly is the easy way we can collaborate even if there is a lot of people involved in the process"</p>
-        <img src="./assets/Profile.png" alt="" class="avatar">
+				<h4 class="p-5">"What I love about Qubly is the easy way we can collaborate even if there is a lot of people involved in the process"</h4>
+        <img src="./assets/Profile.png" alt="" class="avatar mb-4">
 				<h5 class="mb-3">Guillaume Cabane <br/>CTO @ BigSpring</h5>
-				<!--
-				<div class="row mx-auto border border-info">
-					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
-					<img src="./assets/Tonkean.png" alt="" class="col partner_logo img-fluid img-responsive">
-					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
-					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
-					<img src="./assets/Tonkean.png" alt="" class="col gx-5 partner_logo img-fluid img-responsive">
+
+				<div class="row mx-auto d-flex justify-content-center mt-2">
+					<img src="./assets/airbnb.png" alt="Airbnb" class="col-6 col-md-2 p-2 partner_logo img-fluid img-responsive">
+					<img src="./assets/uber.png" alt="Uber" class="col-6 col-md-2 p-2 partner_logo img-fluid img-responsive">
+					<img src="./assets/bloomberg.png" alt="Bloomberg" class="col-6 col-md-2 p-2 partner_logo img-fluid img-responsive">
+					<img src="./assets/washingtonpost.png" alt="The Washington Post" class="col-6 col-md-2 p-2 partner_logo img-fluid img-responsive">
+					<img src="./assets/nike.png" alt="Nike" class="col-6 col-md-2 p-2 partner_logo img-fluid img-responsive">
 				</div>
       </div>
-			-->
     </div>
 	</section>
 	<!--REVIEW SECTION END-->
@@ -176,7 +175,7 @@
 					<p class="lead">Subscribe to our newsletter and be the first to know about our newly launched products, special offers and more.</p>
 					<div class="form-group row px-5">
 						<input type="email" class="form-control col" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-						<button type="submit" class="col-4 btn btn-primary outlinebtn">Subscribe</button>
+						<button type="submit" class="col-4 btn btn-primary outlinebtn p-2">Subscribe</button>
 					</div>
 				</form>
 				
